Add unit tests and test configuration
Add comprehensive JUnit5/Mockito unit tests and test tooling configuration across services. Changes include:

- README: Add test badges, a Tests section with instructions, coverage summary and Surefire configuration notes.
- auth-service: Add maven-surefire-plugin configuration; add MockMaker file for ByteBuddy; add unit tests (JwtTokenProviderTest, ProfileServiceTest, UserServiceTest) and extend AuthServiceTest with more cases.
- project-service: Add maven-surefire-plugin configuration; add multiple unit tests (CourseServiceTest, ProjectServiceTest, ProjectMemberServiceTest, SubmissionServiceTest) and MockMaker file.
- review-service: Add ReviewServiceTest and MockMaker file; update POM.

These changes enable running module tests reliably on modern JVMs (ByteBuddy/Mockito compatibility) and document testing strategy and counts in the repo README.